Pre-Prod/morningnews-dep_service.yml
apiVersion: v1
kind: Service
metadata:
  name: morningnews
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: morningnews
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: morningnews
spec:
  replicas: 3
  selector:
    matchLabels:
      app: morningnews
  template:
    metadata:
      labels:
        app: morningnews
    spec:
      containers:
        - name: morningnews
          image: registry.gitlab.com/thedockerdwelers/morningnews:pre-prod
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
